// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SoupRepository CreateSummary 1`] = `
Object {
  "AWDS": 0,
  "E4": 0,
  "EX": 0,
  "I": 0,
  "IX": 0,
  "IXE": 0,
  "O": 0,
  "OI": 0,
  "OIE": 0,
}
`;

exports[`SoupRepository LookAtDiagonal 1`] = `
Object {
  "E4": 1,
  "EX": 1,
  "IX": 2,
  "OI": 1,
  "OIE": 1,
  "PALABRASUPERGRANDE": 0,
}
`;

exports[`SoupRepository LookAtDiagonalLeft 1`] = `
Object {
  "4E": 1,
  "4EX": 1,
  "4EXE": 1,
  "EI": 1,
  "EIE": 1,
  "EXE": 1,
  "IE": 1,
  "II": 1,
  "PALABRASUPERGRANDE": 0,
  "XE": 2,
  "XX": 1,
  "XXE": 1,
}
`;

exports[`SoupRepository LookAtDown 1`] = `
Object {
  "4": 0,
  "E4": 0,
  "E5": 0,
  "EE": 3,
  "EX": 1,
  "II": 1,
  "IIX": 1,
  "IIXX": 1,
  "IX": 1,
  "OI": 1,
  "OIE": 1,
  "OIEEE": 1,
  "PALABRASUPERGRANDE": 0,
  "XX": 1,
}
`;

exports[`SoupRepository LookAtLeft 1`] = `
Object {
  "1": 0,
  "34": 0,
  "4XII": 1,
  "5EXE": 1,
  "AWD": 0,
  "EI": 1,
  "EIO": 1,
  "EXE": 2,
  "II": 1,
  "IO": 1,
  "PALABRASUPERGRANDE": 0,
  "XE": 2,
  "XII": 1,
}
`;

exports[`SoupRepository LookAtTop 1`] = `
Object {
  "4": 0,
  "AWD": 0,
  "EEEIO": 2,
  "EEIO": 1,
  "EEXE": 1,
  "EI": 1,
  "EIO": 1,
  "EX": 1,
  "EXE": 1,
  "II": 1,
  "IO": 1,
  "XE": 1,
  "XI": 1,
  "XII": 1,
  "XXII": 1,
}
`;

exports[`SoupRepository LookAtTopLeftDiagonal 1`] = `
Object {
  "2": 0,
  "23424": 0,
  "4E": 1,
  "5E": 1,
  "5EIO": 1,
  "AWS": 0,
  "EI": 1,
  "EIO": 1,
  "EX": 1,
  "EXI": 1,
  "IO": 1,
  "XE": 1,
  "XI": 2,
}
`;

exports[`SoupRepository LookToTheRight 1`] = `
Object {
  "EX": 2,
  "EXE": 1,
  "IE": 1,
  "II": 1,
  "IIX4": 1,
  "OI": 1,
  "OIE": 1,
  "PALABRASUPERGRANDE": 0,
  "X4": 1,
  "XE": 1,
}
`;

exports[`SoupRepository LookTopRightDiagonal 1`] = `
Object {
  "4": 0,
  "5": 0,
  "AWD": 0,
  "E": 0,
  "E4": 1,
  "EIE": 1,
  "EXE": 1,
  "EXE4": 1,
  "EXX": 1,
  "IE": 1,
  "II": 1,
  "X": 0,
  "XE4": 1,
  "XX": 1,
}
`;

exports[`SoupRepository LookUpOneLetterWords 1`] = `
Object {
  "1": 0,
  "2": 0,
  "3": 0,
  "4": 1,
  "E": 5,
  "F": 0,
  "I": 3,
  "K": 0,
  "O": 1,
  "P": 0,
  "X": 3,
}
`;

exports[`SoupRepository SearchPhraseMatch 1`] = `
Object {
  "4": 0,
  "E4": 0,
  "E5": 0,
  "EE": 3,
  "EX": 1,
  "II": 1,
  "IIX": 1,
  "IIXX": 1,
  "IX": 1,
  "OI": 1,
  "OIE": 1,
  "OIEEE": 1,
  "PALABRASUPERGRANDE": 0,
  "XX": 1,
}
`;
